2008-01-18  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-13-15
	* add scripts/edmConfDBDiff (for lack of a better place to put
	it)

2007-12-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-13-14
	* add '/customWebPage' to WebGUI

2007-12-20  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-13-13
	* Added TimeProfileService to collect and make available timing 
	info on the application web page
	* Added ExceptionGenerator Analyzer module to generate processor-level
	errors and exceptions
	
2007-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-13-12
	* explicitely generate '<html>' and '</html>' tags, don't rely on
	cgicc commands.

2007-11-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-13-11
	* add scripts/edmConfigFromDB (for lack of a better place to put
	it)

2007-09-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-13-09
	* Statemachine.cc: add missing soap callback if target state is
	'FAILED'.

2007-08-29  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-13-08
	* I think the XMAS monitoring would only now work properly, as the
	itemGroupListener is registered with both (app&mon) info spaces.

2007-08-28  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-13-07
	* *now* the WebGUI should be working properly with xmas ...
	* removed 'addItemRetrieveListener' method.
	* the actionPerformed from xdata::ActionListener (the app
	instantiating the WebGUI) should now recompute all
	necessary parameters upon any 'ItemGroupRetrieveEvent'.
	

2007-08-27  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-13-06
	* fix to WebGUI: monitored parameters were not properly updated
	for xmas

2007-08-22  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-13-05
	* added board sense for DAQ GTFE block (fixes crash when running with fake data)

2007-08-21  Emilio Meschi <emilio.meschi@cern.ch>
